--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
-/opencv_bootcamp_assets_NB6
+/opencv_bootcamp_assets_NB6/race_car_out.mp4
+/opencv_bootcamp_assets_NB6/race_car_out.avi
+/opencv_bootcamp_assets_NB6/race_car_out_x264.mp4
