object detection using tensorflow

--- a/learnopencv/.gitignore
+++ b/learnopencv/.gitignore
@@ -1,3 +1,5 @@
 /opencv_bootcamp_assets_NB6/race_car_out.mp4
 /opencv_bootcamp_assets_NB6/race_car_out.avi
 /opencv_bootcamp_assets_NB6/race_car_out_x264.mp4
+/opencv_bootcamp_assets_NB13/images/*
+/opencv_bootcamp_assets_NB13/models/*
