human pose estimation using the openPose caffe model

--- a/learnopencv/.gitignore
+++ b/learnopencv/.gitignore
@@ -3,3 +3,5 @@
 /opencv_bootcamp_assets_NB6/race_car_out_x264.mp4
 /opencv_bootcamp_assets_NB13/images/*
 /opencv_bootcamp_assets_NB13/models/*
+/opencv_bootcamp_assets_NB14/model/*
+/opencv_bootcamp_assets_NB14/*.png
